- [DS-774] Missing dependencies for PDFBox
- [DSCR-15] Scoped search in simple search form on navigation bar updated to use "discover" URL
- [DSCR-16] Support for browsing facets after using "Search DSpace" in the navigation bar

(Bill Hayes, Stuart Lewis)
- [DS-738] sword.cfg seems no longer used after 1.5

(Andrea Schweer)
- [DS-268] XMLUI Item Mapper cannot handle multiple words in search box

1.6.2
=====

(Tim Donohue, Kim Shepherd, Keith Gilbertson, Stuart Lewis)
- [DS-584] start-handle-server script broken - Error in launcher.xml: Invalid class name

(Stuart Lewis)
- [DS-607] Invalid identifiers not escaped
- [DS-608] Batch metadata import missing item headers

(Ivan Masar, Claudia Juergen)
- [DS-567] Czech localization of 1.6.0
- [DS-595] Czech localization of 1.6.1

1.6.1
=====

(Mark Diggory)
- [DS-571] Upgrade DSpace Services to next release 2.0.1

(Dale Poulter)
- [DS-557] LC Authority Names - Lookup Feature - names w/o dates

(Paulo Jobim)
- [DS-471] Accessing site-level 'mets.xml' in XMLUI doesn't work properly for handle prefixes with periods (e.g. 2010.1)

(Yin Yin Latt)
- [DS-565] Empty description column in Itemview Page - General-Handler.xsl
- [DS-566] Side bar menu dropping when there is license text in collection - DIM-Handler.xsl

(Robin Taylor)
- [DS-497] Date month and day get default values when user returns to describe form
- [DS-501] Change kubrick.xsl to check for the presence of a day and month before displaying them

(Keiji Suzuki)
- [DS-537] Malformed Japanese option values in the authority lookup window

(Peter Dietz)
- [DS-509] SOLR returns ArrayIndexOutOfBounds with non-existent country code OR when there is no view/download data
- [DS-542] verbose output for stats-log-importer displays spurious city/country from previous committed entry

(Kim Shepherd)
- [DS-547] Value for Recent Submissions is not workin in the XMLUI
- [DS-527] Withdrawn items not shown as deleted in OAI