@@ -102,6 +102,9 @@
 (Bill Hayes, Stuart Lewis)
 - [DS-738] sword.cfg seems no longer used after 1.5
 
+(Bill Hayes, Kim Shepherd)
+- [DS-748] COinS in XMLUI has invalid referrer Id and dc metadata, spans are not property constructed
+
 (Andrea Schweer)
 - [DS-268] XMLUI Item Mapper cannot handle multiple words in search box
 
